tests/baselines/reference/classAndInterfaceWithSameName.errors.txt
==== tests/cases/compiler/classAndInterfaceWithSameName.ts (2 errors) ====
    class C { foo: string; }
    interface C { foo: string; } // error
              ~
!!! classAndInterfaceWithSameName.ts(2,11): error TS2000: Duplicate identifier 'C'. Additional locations:
!!! 	classAndInterfaceWithSameName.ts(1,1)
    
    module M {
        class D {
            bar: string;
        }
    
        interface D { // error
                  ~
!!! classAndInterfaceWithSameName.ts(9,15): error TS2000: Duplicate identifier 'D'. Additional locations:
!!! 	classAndInterfaceWithSameName.ts(5,5)
            bar: string;
        }
    }